# vaccine-chain

./: .gitignore  Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/account/: Cargo.toml
pallets/account/src/: lib.rs  mock.rs  tests.rs
pallets/maci-verifier/: Cargo.toml  dwedw
pallets/maci-verifier/src/: lib.rs  parser.rs  types.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs  tests.rs
pallets/vaccine/: Cargo.toml
pallets/vaccine/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
test/test-js/: package.json  vaccine.js
zk-verifier/: Cargo.toml
zk-verifier/src/: lib.rs  verifier.rs
